# ProyectoFinalCicloDetenci-n

./: index.html
DeteccionPersonas/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp
SegmentacionPosturas/: main.py  telegram.py  viewFrame.py
